[Progress_4]投稿詳細表示の実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <header>
+      <h1>Bookers2</h1>
       <% if user_signed_in? %>
         <li>
           <%= link_to "Books", books_path %>
