--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,7 +18,22 @@
 
 <% @books.each do |book| %>
   <p>
-    <%= book.title %>
+    <%= link_to book.title, book_path(book.id) %>
     <%= book.opinion %>
   </p>  
 <% end %>
+
+<table>
+  <tr>
+    <th>UserImage</th>
+    <th>Title</th>
+    <th>Opinion</th>
+  </tr>
+  <% @books.each do |book| %>
+    <tr>
+      <td><%= book.user.name %></td>
+      <td><%= link_to book.title, book_path(book.id) %></td>
+      <td><%= book.opinion %></td>
+    </tr>
+  <% end %>
+</table>
