--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h1>Book detail</h1>
+
+<table>
+  <tr>
+    <td><%= @book.user.name %></td>
+    <td><%= @book.title %></td>
+    <td><%= @book.opinion %></td>
+    <% if @book.user == current_user %>
+      <td>Edit</td>
+      <td>Destroy</td>
+    <% end %>
+  </tr>
+  
+</table>
