--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
       <h1>Bookers2</h1>
       <% if user_signed_in? %>
         <li>
+          <%= link_to "Home", user_path(current_user.id) %>
+        </li>
+        <li>
+          <%= link_to "Users", users_path %>
+        </li>
+        <li>
           <%= link_to "Books", books_path %>
         </li>
         <li>
