--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h1>User info</h1>
+<%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
+  <div class="field">
+    <%= f.label :Name %><br>
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :Image %><br>
+    <%= f.file_field :profile_image, accept: "image/*" %>
+  </div>
+  <div class="field">
+    <%= f.label :Introduction %><br>
+    <%= f.text_area :introduction %>
+  </div>
+  <%= f.submit "Update User"%>
+<% end %>
