[Progress_8]バリデーション、フラッシュメッセージの実装

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,14 @@
+<% if @user.errors.any? %>
+  <div class="message">
+    <%= @user.errors.count %>error prohibited this obj from being saved:
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <h1>User info</h1>
 <%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
   <div class="field">
