--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,14 @@
+<% if @book.errors.any? %>
+  <div class="message">
+    <%= @book.errors.count %>error prohibited this obj from being saved:
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <h1>Editing Book</h1>
 
 <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
@@ -7,7 +18,7 @@
   </div>
   <div class="field">
     <%= f.label :Opinion %><br>
-    <%= f.text_area :opinion %>
+    <%= f.text_area :body %>
   </div>
   <%= f.submit "Update Book" %>
 <% end %>
