--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,32 +1,21 @@
-<h1>New Book</h1>
-
-<%= form_with model: @book, url: books_path, method: :post do |f| %>
-  <div class="field">
-    <%= f.label :Title %><br>
-    <%= f.text_field :title %>
+<div class="container-fluid">
+  <div class="row px-3 py-4">
+    <div class="col-md-3">
+      <% if @book.errors.any? %>
+        <div class="message">
+          <%= @book.errors.count %>error prohibited this obj from being saved:
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      
+      <%= render "users/info", user: @user, book: @book %>
+    </div>
+    <div class="col-md-8 offset-1">
+      <%= render "list", books: @books %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :Opinion %><br>
-    <%= f.text_area :opinion %>
-  </div>
-  <%= f.submit "Create Book" %>
-<% end %>
-
-
-
-<h1>Books</h1>
-
-<table>
-  <tr>
-    <th>UserImage</th>
-    <th>Title</th>
-    <th>Opinion</th>
-  </tr>
-  <% @books.each do |book| %>
-    <tr>
-      <td><%= book.user.name %></td>
-      <td><%= link_to book.title, book_path(book.id) %></td>
-      <td><%= book.opinion %></td>
-    </tr>
-  <% end %>
-</table>
+</div>
