--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,17 @@
+<div class="message"><%= flash[:notice] %></div>
+
+<%= render "users/info", user: @user, book: @book_new %>
+
 <h1>Book detail</h1>
 
 <table>
   <tr>
-    <td><%= @book.user.name %></td>
+    <td>
+    <%= image_tag @book.user.get_profile_image(100,100) %><br>
+    <%= @book.user.name %>
+    </td>
     <td><%= @book.title %></td>
-    <td><%= @book.opinion %></td>
+    <td><%= @book.body %></td>
     <% if @book.user == current_user %>
       <td><%= link_to "Edit", edit_book_path(@book) %></td>
       <td><%= link_to "Destroy", book_path(@book), method: :delete %></td>
