--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,14 @@
+<!--<div class="container-fluid">-->
+<!--  <div class="row px-3 py-4">-->
+<!--    <div class="col-md-3">-->
+      
+<!--    </div>-->
+<!--    <div class="col-md-8 offset-1">-->
+      
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,36 +17,67 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/f056f30567.js" crossorigin="anonymous"></script>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <header>
-      <h1>Bookers2</h1>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "Home", user_path(current_user.id) %>
-        </li>
-        <li>
-          <%= link_to "Users", users_path %>
-        </li>
-        <li>
-          <%= link_to "Books", books_path %>
-        </li>
-        <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        </ii>
-      <% else %>
-        <li>
-          <%= link_to "新規登録", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_user_session_path %>
-        </li>
-      <% end %>
-    </header>
     
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand text-light" href="/">Bookers</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+            <li class="nav-item">
+              <i class="fa-solid fa-house text-light"></i>
+              <%= link_to "Home", user_path(current_user.id), class: 'nav-link text-light' %>
+            </li>
+            <li class="nav-item">
+              <i class="fa-solid fa-users text-light"></i>
+              <%= link_to "Users", users_path, class: 'nav-link text-light' %>
+            </li>
+            <li class="nav-item">
+              <i class="fa-solid fa-book-open text-light"></i>
+              <%= link_to "Books", books_path, class: 'nav-link text-light' %>
+            </li>
+            <li class="nav-item">
+              <i class="fa-solid fa-arrow-right-from-bracket text-light"></i>
+              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
+            </li>
+            <% else %>
+            <li class="nav-item">
+              <i class="fa-solid fa-user text-light"></i>
+              <%= link_to "Home", root_path, class: 'nav-link text-light' %>
+            </li>
+            <li class="nav-item">
+              <i class="fa-solid fa-link text-light"></i>
+              <%= link_to "About", about_path, class: 'nav-link text-light' %>
+            </li>
+            <li class="nav-item">
+              <i class="fa-solid fa-user-plus text-light"></i>
+              <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-light' %>
+            </li>
+            <li class="nav-item">
+              <i class="fa-solid fa-arrow-right-to-bracket text-light"></i>
+              <%= link_to "Log in", new_user_session_path, class: 'nav-link text-light' %>
+            </li>
+            <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+      
     <%= yield %>
+    
+    <footer>
+      CopyRight Infratop.inc
+    </footer>
   </body>
 </html>
