--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,5 @@
-<h1>User info</h1>
-<%= image_tag @user.get_profile_image(100,100) %>
-<table>
-  <tr>
-    <th>name</th>
-    <th><%= @user.name %></th>
-  </tr>
-    <th>introduction</th>
-    <th><%= @user.introduction %></th>
-</table>
-<% if @user.id == current_user.id %>
-  <%= link_to "えでぃっと", edit_user_path(@user) %>
-<% end %>
+<div class="message"><%= flash[:notice] %></div>
 
+<%= render "users/info", user: @user, book: @book %>
 
-<h1>Books</h1>
-
-<table>
-  <tr>
-    <th>UserImage</th>
-    <th>Title</th>
-    <th>Opinion</th>
-  </tr>
-  <% @user.books.each do |book| %>
-    <tr>
-      <td><%= book.user.name %></td>
-      <td><%= link_to book.title, book_path(book.id) %></td>
-      <td><%= book.opinion %></td>
-    </tr>
-  <% end %>
-</table>
+<%= render "books/list", books: @books %>
