--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,9 +1,9 @@
 <h1>Books</h1>
 
-<table>
+<table class="m-4">
   <tr>
     <th></th>
-    <th>Title</th>
+    <th class="pr-5">Title</th>
     <th>Opinion</th>
   </tr>
   <% books.each do |book| %>
