--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container px-5">
   <div class="row px-3 py-4">
     <div class="col-md-3">
       <% if @book.errors.any? %>
