--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,21 +1,26 @@
 <div class="message"><%= flash[:notice] %></div>
 
-<%= render "users/info", user: @user, book: @book_new %>
-
-<h1>Book detail</h1>
-
-<table>
-  <tr>
-    <td>
-    <%= image_tag @book.user.get_profile_image(100,100) %><br>
-    <%= @book.user.name %>
-    </td>
-    <td><%= @book.title %></td>
-    <td><%= @book.body %></td>
-    <% if @book.user == current_user %>
-      <td><%= link_to "Edit", edit_book_path(@book) %></td>
-      <td><%= link_to "Destroy", book_path(@book), method: :delete %></td>
-    <% end %>
-  </tr>
-  
-</table>
+<div class="container px-5">
+  <div class="row px-3 py-4">
+    <div class="col-md-3">
+      <%= render "users/info", user: @user, book: @book %>
+    </div>
+    <div class="col-md-8 offset-1">
+      <h1>Book detail</h1>
+      <table class="p-2">
+        <tr>
+          <td class="pr-5">
+          <%= image_tag @book.user.get_profile_image(100,100) %><br>
+          <%= @book.user.name %>
+          </td>
+          <td class="pr-4"><%= @book.title %></td>
+          <td class="pr-3"><%= @book.body %></td>
+          <% if @book.user == current_user %>
+            <td class="pr-3"><%= link_to "Edit", edit_book_path(@book), class: "btn btn-success" %></td>
+            <td class="pr-3"><%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-danger", "data-confirm" => "本当に削除しますか？" %></td>
+          <% end %>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
