--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,12 +1,26 @@
 <div class="message"><%= flash[:notice] %></div>
-<h1>welcome to Bookers !!</h1>
-<p>In Bookers,</p>
-<p>you can share and exchange your opinions , inpressions , and emotions</p>
-<p>about various books!</p>
 
-<li>
-  <%= link_to "Sign up", new_user_registration_path %>
-</li>
-<li>
-  <%= link_to "Log in", new_user_session_path %>
-</li>
+<div class="container">
+  <div class="row">
+    <div class="col p-1 mx-auto text-center">
+      <h1>
+        Welcome to 
+        <i class="fa-solid fa-book"></i>
+        Bookers!
+      </h1>
+      <p>
+        In
+        <i class="fa-solid fa-book"></i>
+        Bookers,
+      </p>
+      <p>you can share and exchange your opinions , inpressions , and emotions</p>
+      <p>about various books!</p>
+      <a>
+        <%= link_to "Log in", new_user_session_path, class: "btn btn-lg btn-block btn-info mb-3" %>
+      </a>
+      <a>
+        <%= link_to "Sign up", new_user_registration_path, class: "btn btn-lg btn-block btn-success" %>
+      </a>
+    </div>
+  </div>
+</div>
