--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,3 @@
-<!--<div class="container-fluid">-->
-<!--  <div class="row px-3 py-4">-->
-<!--    <div class="col-md-3">-->
-      
-<!--    </div>-->
-<!--    <div class="col-md-8 offset-1">-->
-      
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -34,38 +23,46 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-            <li class="nav-item">
-              <i class="fa-solid fa-house text-light"></i>
-              <%= link_to "Home", user_path(current_user.id), class: 'nav-link text-light' %>
+            <li>
+              <%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
+               <i class="fa-solid fa-house"></i> Home
+               <% end %>
             </li>
-            <li class="nav-item">
-              <i class="fa-solid fa-users text-light"></i>
-              <%= link_to "Users", users_path, class: 'nav-link text-light' %>
+            <li>
+              <%= link_to users_path, class: 'nav-link text-light' do %>
+              <i class="fa-solid fa-users"></i> Users
+              <% end %>
             </li>
-            <li class="nav-item">
-              <i class="fa-solid fa-book-open text-light"></i>
-              <%= link_to "Books", books_path, class: 'nav-link text-light' %>
+            <li>
+              <%= link_to books_path, class: 'nav-link text-light' do %>
+              <i class="fa-solid fa-book-open"></i> Books
+              <% end %>
             </li>
-            <li class="nav-item">
-              <i class="fa-solid fa-arrow-right-from-bracket text-light"></i>
-              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
+            <li>
+              <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
+              <i class="fa-solid fa-arrow-right-from-bracket"></i> Log out
+              <% end %>
             </li>
             <% else %>
-            <li class="nav-item">
-              <i class="fa-solid fa-user text-light"></i>
-              <%= link_to "Home", root_path, class: 'nav-link text-light' %>
+            <li>
+              <%= link_to root_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-home"></i> Home
+              <% end %>
             </li>
-            <li class="nav-item">
-              <i class="fa-solid fa-link text-light"></i>
-              <%= link_to "About", about_path, class: 'nav-link text-light' %>
+            <li>
+              <%= link_to about_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-link"></i> About
+              <% end %>
             </li>
-            <li class="nav-item">
-              <i class="fa-solid fa-user-plus text-light"></i>
-              <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-light' %>
+            <li>
+              <%= link_to new_user_registration_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-user-plus"></i> Sign up
+              <% end %>
             </li>
-            <li class="nav-item">
-              <i class="fa-solid fa-arrow-right-to-bracket text-light"></i>
-              <%= link_to "Log in", new_user_session_path, class: 'nav-link text-light' %>
+            <li>
+              <%= link_to new_user_session_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-sign-in-alt"></i> Log in
+              <% end %>
             </li>
             <% end %>
             </ul>
@@ -77,7 +74,13 @@
     <%= yield %>
     
     <footer>
-      CopyRight Infratop.inc
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col mx-auto text-center">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </container>
     </footer>
   </body>
 </html>
