--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,27 +1,31 @@
-<h1>User info</h1>
-<%= image_tag user.get_profile_image(100,100) %>
-<table>
-  <tr>
-    <th>name</th>
-    <th><%= user.name %></th>
-  </tr>
-    <th>introduction</th>
-    <th><%= user.introduction %></th>
-</table>
-<% if user.id == current_user.id %>
-  <%= link_to "えでぃっと", edit_user_path(user) %>
-<% end %>
-
-<h1>New Book</h1>
-
-<%= form_with model: book, url: books_path, method: :post do |f| %>
-  <div class="field">
-    <%= f.label :Title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :Opinion %><br>
-    <%= f.text_area :body %>
-  </div>
-  <%= f.submit "Create Book" %>
-<% end %>
+    <h1>User info</h1>
+    <%= image_tag user.get_profile_image(100,100) %>
+    <table class="w-75 m-auto">
+      <tr>
+        <th>name</th>
+        <th class="text-right"><%= user.name %></th>
+      </tr>
+      <tr>
+        <th>introduction</th>
+        <th class="text-right"><%= user.introduction %></th>
+      </tr>
+    </table>
+    <% if user.id == current_user.id %>
+      <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block my-4" do %>
+        <i class="fa-solid fa-user-gear"></i>
+      <% end %>
+    <% end %>
+    
+    <h1>New Book</h1>
+    
+    <%= form_with model: book, url: books_path, method: :post do |f| %>
+      <div class="field">
+        <%= f.label :Title %><br>
+        <%= f.text_field :title %>
+      </div>
+      <div class="field">
+        <%= f.label :Opinion %><br>
+        <%= f.text_area :body %>
+      </div>
+      <%= f.submit "Create Book", class: "btn-success" %>
+    <% end %>
