--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,24 @@
-<%= render "info", user: @user, book: @book %>
-
-<h1>Users</h1>
-
-<table>
-  <tr>
-    <th>Image</th>
-    <th>name</th>
-    <th></th>
-  </tr>
-  <% @users.each do |user| %>
-    <tr>
-      <td><%= image_tag user.get_profile_image(100,100) %></td>
-      <td><%= user.name %></td>
-      <td><%= link_to "Show", user_path(user.id) %></td>
-    </tr>
-  <% end %>
-</table>
+<div class="container px-5">
+  <div class="row px-3 py-4">
+    <div class="col-md-3">
+      <%= render "users/info", user: @user, book: @book %>
+    </div>
+    <div class="col-md-8 offset-1">
+      <h1>Users</h1>
+      <table class="m-4">
+        <tr>
+          <th class="pr-5">Image</th>
+          <th class="pr-5">name</th>
+          <th></th>
+        </tr>
+        <% @users.each do |user| %>
+          <tr>
+            <td><%= image_tag user.get_profile_image(100,100) %></td>
+            <td><%= user.name %></td>
+            <td><%= link_to "Show", user_path(user.id) %></td>
+          </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
