--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -22,3 +22,7 @@
   </div>
   <%= f.submit "Update Book" %>
 <% end %>
+
+<%= link_to "Show", book_path(@book.id) %>
+|
+<%= link_to "Back", books_path %>
