--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
       
       <%= render "users/info", user: @user, book: @book %>
     </div>
-    <div class="col-md-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <%= render "list", books: @books %>
     </div>
   </div>
