--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,15 +3,17 @@
 <div class="container px-5">
   <div class="row px-3 py-4">
     <div class="col-md-3">
-      <%= render "users/info", user: @user, book: @book %>
+      <%= render "users/info", user: @user, book: @book_new %>
     </div>
-    <div class="col-md-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <h1>Book detail</h1>
       <table class="p-2">
         <tr>
           <td class="pr-5">
-          <%= image_tag @book.user.get_profile_image(100,100) %><br>
-          <%= @book.user.name %>
+            <%= link_to user_path(@book.user.id) do %>
+              <%= image_tag @book.user.get_profile_image(100,100) %><br>
+              <%= @book.user.name %>
+            <% end %>
           </td>
           <td class="pr-4"><%= @book.title %></td>
           <td class="pr-3"><%= @book.body %></td>
