--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
             </li>
             <li>
               <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
-              <i class="fa-solid fa-arrow-right-from-bracket"></i> Log out
+              <i class="fa-solid fa-right-from-bracket"></i></i> Log out
               <% end %>
             </li>
             <% else %>
