--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -10,13 +10,11 @@
         <th class="text-right"><%= user.introduction %></th>
       </tr>
     </table>
-    <% if user.id == current_user.id %>
-      <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block my-4" do %>
+      <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block my-4" do %>
         <i class="fa-solid fa-user-gear"></i>
       <% end %>
-    <% end %>
     
-    <h1>New Book</h1>
+    <h1>New book</h1>
     
     <%= form_with model: book, url: books_path, method: :post do |f| %>
       <div class="field">
