--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,15 +12,15 @@
 <h1>User info</h1>
 <%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
   <div class="field">
-    <%= f.label :Name %><br>
+    <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :Image %><br>
+    <%= f.label :image %><br>
     <%= f.file_field :profile_image, accept: "image/*" %>
   </div>
   <div class="field">
-    <%= f.label :Introduction %><br>
+    <%= f.label :introduction %><br>
     <%= f.text_area :introduction %>
   </div>
   <%= f.submit "Update User"%>
