--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container px-5">
-  <div class="row px-3 py-4">
+  <div class="row">
     <div class="col-md-3">
       <%= render "users/info", user: @user, book: @book %>
     </div>
-    <div class="col-md-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <h1>Users</h1>
       <table class="m-4">
         <tr>
