--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <div class="col-md-3">
       <%= render "users/info", user: @user, book: @book %>
     </div>
-    <div class="col-md-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <%= render "books/list", books: @books %>
     </div>
   </div>
